--- a/config.json
+++ b/config.json
@@ -1,26 +1,26 @@
 {   
     "bot1": {
         "source": "https://github.com/blandk77/Url-Uploader-Bot",
-        "branch": "master",
+        "branch": "main",
         "env": {
             "TECH_VJ_BOT_TOKEN": "7987512854:AAFBM6Z3Am6M9C1uHAsWpe_zS0ehJQq8MyI"
         },
-        "run": "run.sh"
+        "run": "bot.py"
     },
     "bot2": {
         "source": "https://github.com/blandk77/Rename-Bot-2GB",
-        "branch": "master",
+        "branch": "main",
         "env": {
             "BOT_TOKEN": "7299345692:AAEoPK2UkI85plbum9CPHaupNpnHcyCtjLc"
         },
-        "run": "run.sh"
+        "run": "bot.py"
     },
     "bot3": {
         "source": "https://github.com/blandk77/Autofilter",
-        "branch": "master",
+        "branch": "main",
         "env": {
             "BOT_TOKEN": "7931367906:AAEdd-I6M-iDekw-jsFYezdi6ZqIB6rFFN8"
         },
-        "run": "run.sh"
+        "run": "bot.py"
     }
 }
